Fix "blurriness" of footer image

--- a/_assets/css/_improfestival.scss
+++ b/_assets/css/_improfestival.scss
@@ -231,7 +231,6 @@ button {
 
 .row.footer-bg {
   background-image: asset_url('footer_narrow.jpg');
-  background-size: cover;
   margin-bottom: -9em;
   min-height: 30em;
 }
